--- a/Secret.html.html
+++ b/Secret.html.html
@@ -11,7 +11,7 @@
             font-size: 17px;
             line-height: 1.5;
             background-color: #fff;
-            background-image: url('D:/Personal/e7c22d12-acfe-4cf2-9c1f-f60cb200f18d.jpeg'); /* Hearts background */
+            background-image: url('e7c22d12-acfe-4cf2-9c1f-f60cb200f18d.jpeg'); /* Hearts background */
             background-attachment: scroll;
             background-size: cover;  /* Ensure the background covers the entire page */
         }
@@ -78,7 +78,7 @@
             height: auto;  /* Maintain aspect ratio */
             display: block; /* Ensure it's a block-level element */
             margin: 0 auto; /* Center align */
-            background-image: url('D:/Personal/f89ea34d-38f9-4366-9b38-9b1543843db8.jpeg'); /* Path to rings image */
+            background-image: url('f89ea34d-38f9-4366-9b38-9b1543843db8.jpeg'); /* Path to rings image */
             background-size: contain;  /* Make sure the background image fits the container */
             background-repeat: no-repeat;  /* Avoid repeating the image */
             background-position: center;  /* Center the background image */
