--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
             z-index: 10000;
             display: none;
         }
+
+        /* Message for timed content visibility */
+        .timed-message {
+            text-align: center;
+            font-size: 20px;
+            color: red;
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -162,6 +170,11 @@
         </div>
     </div>
 
+    <!-- Timed content visibility message -->
+    <div class="timed-message" id="timed-message">
+        Your content will disappear in <span id="timer">3:00</span> minutes!
+    </div>
+
     <div class="screenshot-blocker" id="screenshot-blocker">
         Screenshot blocked!
     </div>
@@ -171,9 +184,35 @@
         Your session has expired! Please refresh or log in again.
     </div>
 
+    <!-- Geolocation Script -->
+    <script>
+        fetch('https://ipinfo.io/json?token=d0dfd888f6b70a')
+            .then(response => response.json())
+            .then(data => {
+                const userCity = data.city.toLowerCase();
+                const allowedCities = ['bengaluru', 'rajahmundry', 'kovvur'];
+
+                const kovvurIPs = [
+                    '43.227.129.0', '43.227.129.245', '43.227.129.222', 
+                    '43.227.129.162', '43.227.129.157', '43.227.129.146', 
+                    '43.227.129.132', '43.227.129.87', '43.227.129.86'
+                ];
+
+                const userIP = data.ip;
+
+                if (!allowedCities.includes(userCity) && !kovvurIPs.includes(userIP)) {
+                    window.location.href = 'access-denied.html';
+                }
+            })
+            .catch(error => {
+                console.error('Error fetching location data:', error);
+                window.location.href = 'access-denied.html';
+            });
+    </script>
+
     <!-- Screenshot and Copy Prevention Script -->
     <script>
-        // Prevent Print Screen and apply visual blur disruption for phones as well
+        // Prevent Print Screen and apply visual blur disruption
         document.addEventListener('keydown', function(e) {
             if (e.key === 'PrintScreen' || e.keyCode === 44) { // KeyCode for PrintScreen
                 e.preventDefault();
@@ -185,16 +224,6 @@
                     document.body.classList.remove('blurred');
                 }, 1000); // Blur for 1 second
             }
-        });
-
-        // Prevent screenshot-like behavior on touch devices
-        window.addEventListener('touchstart', function(e) {
-            e.preventDefault();
-            alert('Screenshots are not allowed!');
-            document.body.classList.add('blurred');
-            setTimeout(function() {
-                document.body.classList.remove('blurred');
-            }, 1000);
         });
 
         // Disable right-click
@@ -230,11 +259,30 @@
             isBlurred = false;
         });
 
-        // Session Timer
-        setTimeout(function() {
-            // After 3 minutes, show session expired message and block interactions
-            document.getElementById('session-expired').style.display = 'flex';
-        }, 180000);  // 180000 ms = 3 minutes
+        // Session Timer (content visibility)
+        let timeLeft = 180; // 3 minutes in seconds
+        const timerElement = document.getElementById('timer');
+        const timedMessage = document.getElementById('timed-message');
+
+        function updateTimer() {
+            const minutes = Math.floor(timeLeft / 60);
+            const seconds = timeLeft % 60;
+            timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+
+            if (timeLeft <= 0) {
+                document.getElementById('session-expired').style.display = 'flex';
+                setTimeout(function() {
+                    window.location.reload();
+                }, 3000);
+            } else {
+                timeLeft--;
+                setTimeout(updateTimer, 1000);
+            }
+        }
+
+        // Start the timer and show the message
+        timedMessage.style.display = 'block';
+        updateTimer();
     </script>
 </body>
 </html>
