--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
             display: none;
         }
 
+        /* Timed content blackout */
+        .blackout {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9); /* Full blackout */
+            z-index: 9999;
+            display: none;
+        }
+
         /* Message for timed content visibility */
         .timed-message {
             text-align: center;
@@ -175,9 +187,8 @@
         Your content will disappear in <span id="timer">3:00</span> minutes!
     </div>
 
-    <div class="screenshot-blocker" id="screenshot-blocker">
-        Screenshot blocked!
-    </div>
+    <!-- Full blackout overlay -->
+    <div id="blackout" class="blackout"></div>
 
     <!-- Session Expired Modal -->
     <div id="session-expired" class="session-expired">
@@ -263,6 +274,7 @@
         let timeLeft = 180; // 3 minutes in seconds
         const timerElement = document.getElementById('timer');
         const timedMessage = document.getElementById('timed-message');
+        const blackout = document.getElementById('blackout');
 
         function updateTimer() {
             const minutes = Math.floor(timeLeft / 60);
@@ -270,10 +282,10 @@
             timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
 
             if (timeLeft <= 0) {
-                document.getElementById('session-expired').style.display = 'flex';
+                blackout.style.display = 'block'; // Activate blackout after timer
                 setTimeout(function() {
-                    window.location.reload();
-                }, 3000);
+                    window.location.reload(); // Refresh the page after blackout
+                }, 3000); // Wait for 3 seconds before refreshing
             } else {
                 timeLeft--;
                 setTimeout(updateTimer, 1000);
