--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- Timed content visibility message -->
     <div class="timed-message" id="timed-message">
-        Your content will disappear in <span id="timer">3:00</span> minutes!
+        Your content will disappear in <span id="timer">1:00</span> minute!
     </div>
 
     <!-- Full blackout overlay -->
@@ -271,7 +271,7 @@
         });
 
         // Session Timer (content visibility)
-        let timeLeft = 180; // 3 minutes in seconds
+        let timeLeft = 60; // 1 minute in seconds
         const timerElement = document.getElementById('timer');
         const timedMessage = document.getElementById('timed-message');
         const blackout = document.getElementById('blackout');
