--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             }
 
             if (timeLeft <= 0) {
-                window.location.href = 'https://www.biblegateway.com/passage/?search=Genesis%2029%3A18-20&version=NIV'; // Redirect to Bible Gateway after timer ends
+                window.location.href = 'https://www.biblegateway.com/passage/?search=Ruth%201%3A16-17&version=NIV'; // Redirect to the new URL after timer ends
             } else {
                 timeLeft--;
                 setTimeout(updateTimer, 1000);
