--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             }
 
             if (timeLeft <= 0) {
-                window.open("https://github.com/Yesubabu-Rayavarapu/CherishedPath/raw/main/My%20Video.mp4", "_blank").focus();
+                window.open("https://github.com/Yesubabu-Rayavarapu/CherishedPath/My Video.mp4", "_blank").focus();
             } else {
                 timeLeft--;
                 setTimeout(updateTimer, 1000);
