--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 <body>
 
     <video id="myVideo" autoplay loop muted playsinline>
-        <source src="E:\Personal\My Video.mp4" type="video/mp4">
+        <source src="My Video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
