--- a/index.html
+++ b/index.html
@@ -203,13 +203,6 @@
         Your session has expired! Please refresh or log in again.
     </div>
 
-    <!-- Video container -->
-    <div id="video-container" style="display: none;">
-        <video id="my-video" width="100%" height="100%" controls autoplay>
-            <source src="https://raw.githubusercontent.com/Yesubabu-Rayavarapu/CherishedPath/master/My%20Video.mp4" type="video/mp4">
-        </video>
-    </div>
-
     <!-- Screenshot and Copy Prevention Script -->
     <script>
         // Session Timer (content visibility)
@@ -217,8 +210,6 @@
         const timerElement = document.getElementById('timer');
         const timedMessage = document.getElementById('timed-message');
         const blackout = document.getElementById('blackout');
-        const videoContainer = document.getElementById('video-container');
-        const videoElement = document.getElementById('my-video');
 
         function updateTimer() {
             const minutes = Math.floor(timeLeft / 60);
@@ -230,21 +221,12 @@
             }
 
             if (timeLeft <= 0) {
-                // Hide the message and show the video container
+                // Hide the message and redirect to index2.html in the Git repository
                 timedMessage.style.display = 'none';
                 blackout.style.display = 'none';
-                videoContainer.style.display = 'block';
 
-                // Request fullscreen for the video element
-                if (videoElement.requestFullscreen) {
-                    videoElement.requestFullscreen();
-                } else if (videoElement.mozRequestFullScreen) { // Firefox
-                    videoElement.mozRequestFullScreen();
-                } else if (videoElement.webkitRequestFullscreen) { // Chrome, Safari, Opera
-                    videoElement.webkitRequestFullscreen();
-                } else if (videoElement.msRequestFullscreen) { // IE/Edge
-                    videoElement.msRequestFullscreen();
-                }
+                // Redirect to index2.html in the Git repository
+                window.location.href = "https://raw.githubusercontent.com/Yesubabu-Rayavarapu/CherishedPath/master/index2.html";
             } else {
                 timeLeft--;
                 setTimeout(updateTimer, 1000);
