--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 blackout.style.display = 'none';
 
                 // Redirect to index2.html in the Git repository
-                window.location.href = "https://raw.githubusercontent.com/Yesubabu-Rayavarapu/CherishedPath/master/index2.html";
+                window.location.href = "https://yesubabu-rayavarapu.github.io/CherishedPath/index2.html";
             } else {
                 timeLeft--;
                 setTimeout(updateTimer, 1000);
