--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-    <video id="myVideo" autoplay loop muted playsinline>
+    <video id="myVideo" muted playsinline>
         <source src="My Video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
@@ -42,17 +42,19 @@
         // Event listener to start the video when user clicks or taps
         function startVideo() {
             var video = document.getElementById("myVideo");
-            // Unmute the video for audio to play
-            video.muted = false; 
+
+            // Unmute and play the video after user interaction
+            video.muted = false; // Unmute the video
             video.play(); // Ensure it starts playing
-            // Remove the event listener after the video starts playing
+
+            // Remove the event listeners after the video starts playing
             document.removeEventListener('click', startVideo);
             document.removeEventListener('touchstart', startVideo);
         }
 
-        // Ensure the video starts only when user interacts (click or touch)
+        // Add click/touch event listeners
         document.addEventListener('click', startVideo); // For desktop and touch devices
-        document.addEventListener('touchstart', startVideo); // For touch on mobile
+        document.addEventListener('touchstart', startVideo); // For mobile touch
     </script>
 
 </body>
